tickting/infera/k8s/auth-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-internal-srv
  namespace: default
spec:
  type: ExternalName
  externalName: ingress-nginx-controller.ingress-nginx.svc.cluster.local
  ports:
    - port: 80
