tickting/infera/k8s/client-deplo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: dawit687/client
      hostAliases:
        - ip: 10.103.156.31
          hostnames:
            - "ticketing.dev"

---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      targetPort: 3000
      port: 3000
